@@ -194,7 +194,8 @@ class Super(node_classes.NodeNG):
                 # We can obtain different descriptors from a super depending
                 # on what we are accessing and where the super call is.
                 if inferred.type == "classmethod":
-                    yield bases.BoundMethod(inferred, cls)
+                    # Pass original caller for classmethod too
+                    yield bases.BoundMethod(inferred, cls, original_caller=self.type)
                 elif self._scope.type == "classmethod" and inferred.type == "method":
                     yield inferred
                 elif self._class_based or inferred.type == "staticmethod":
@@ -214,7 +215,9 @@ class Super(node_classes.NodeNG):
                     except InferenceError:
                         yield util.Uninferable
                 else:
-                    yield bases.BoundMethod(inferred, cls)
+                    # Pass original caller (self.type) so infer_call_result can
+                    # correctly resolve Self return types to the actual caller type
+                    yield bases.BoundMethod(inferred, cls, original_caller=self.type)
 
         # Only if we haven't found any explicit overwrites for the
         # attribute we look it up in the special attributes
